# rio-build

./: .env.local.example  .envrc  .gitattributes  .gitignore  .secretsignore  CLAUDE.md  Cargo.json  Cargo.lock.license  Cargo.toml  DESIGN.md  LICENSE  METRICS.md  PLAN-I189.md  README.md  SPRINT-SAVE-FINDINGS.md  TODO.md  clippy.toml  codecov.yml  deny.toml  dev.just  eks.just  flake-check.sh  flake.nix  justfile  process-compose.yaml  rust-toolchain.toml
crates/rio-agent/: Cargo.toml
crates/rio-agent/src/: agent.rs  build_coordinator.rs  builder.rs  grpc_server.rs  heartbeat.rs  lib.rs  main.rs  membership.rs  nar_exporter.rs  raft_grpc.rs  raft_network.rs  raft_node.rs  raft_proto_conv.rs  state_machine.rs  storage.rs
crates/rio-agent/tests/: integration.rs  multi_node_cluster.rs
crates/rio-build/: Cargo.toml
crates/rio-build/src/: client.rs  cluster.rs  config.rs  evaluator.rs  lib.rs  main.rs  output_handler.rs
crates/rio-build/tests/: client_tests.rs  cluster_integration.rs  deduplication_tests.rs  mock_agent.rs
crates/rio-builder/: Cargo.toml
crates/rio-builder/src/: builder.rs  executor.rs  grpc_server.rs  lib.rs  main.rs
crates/rio-common/: Cargo.toml  build.rs
crates/rio-common/proto/: build_service.proto
crates/rio-common/src/: derivation.rs  lib.rs  nix_utils.rs  types.rs
crates/rio-dispatcher/: Cargo.toml
crates/rio-dispatcher/src/: async_progress.rs  build_queue.rs  builder_pool.rs  channel_bridge.rs  dispatcher.rs  dispatcher_loop.rs  grpc_server.rs  lib.rs  main.rs  nix_store.rs  (+2 more)
gorgond-diesel/: Cargo.toml
gorgond-diesel/src/: lib.rs
nix-supervisor/: Cargo.toml
nix-web/: Cargo.toml  README.md
nix-web/src/: nix_cli.rs
nix-web/templates/: derivation.html
rio-auth/: Cargo.toml
rio-auth/src/: hmac.rs  jwt_interceptor.rs  lib.rs
rio-bench/: Cargo.toml
rio-bench/benches/: dispatch.rs  submit_build.rs
rio-bench/src/: lib.rs
rio-build/: Cargo.toml
rio-build/src/: lib.rs  main.rs  observability.rs
rio-build/tests/: direct_protocol.rs  golden_conformance.rs  integration_build.rs  protocol_conformance.rs
rio-builder/: Cargo.toml  build.rs
rio-builder/src/: cgroup.rs  config.rs  fixture.rs  health.rs  hw_bench.rs  hw_class.rs  lib.rs  log_stream.rs  main.rs  overlay.rs  quota.rs  runtime.rs  synth_db.rs  upload.rs
rio-builder/tests/: executor_kind_gate.rs  metrics_registered.rs
rio-cli/: Cargo.toml
rio-cli/src/: bps.rs  builds.rs  cutoffs.rs  derivations.rs  estimator.rs  gc.rs  logs.rs  main.rs  poison.rs  pool.rs  sla.rs  status.rs  tenants.rs  upstream.rs  verify_chunks.rs  workers.rs  wps.rs
rio-cli/tests/: parse.rs  smoke.rs
rio-common/: Cargo.toml
rio-common/src/: backoff.rs  bloom.rs  config.rs  error.rs  grpc.rs  hmac.rs  jwt.rs  jwt_interceptor.rs  k8s.rs  lib.rs  limits.rs  migrate.rs  newtype.rs  observability.rs  oidc.rs  s3.rs  schema.rs  server.rs  signal.rs  task.rs  tenant.rs  tls.rs
rio-common/tests/: tls_integration.rs
rio-controller/: Cargo.toml  build.rs
rio-controller/src/: error.rs  fixtures.rs  lib.rs  main.rs  scaling.rs
rio-controller/tests/: metrics_registered.rs  roundtrip.rs
rio-crds/: Cargo.toml
rio-crds/src/: builderpool.rs  builderpoolset.rs  common.rs  componentscaler.rs  fetcherpool.rs  karpenter.rs  lib.rs  pool.rs  workerpool.rs  workerpoolset.rs
rio-gateway/: Cargo.toml  build.rs
rio-gateway/src/: config.rs  drv_cache.rs  handler.rs  lib.rs  main.rs  quota.rs  ratelimit.rs  server.rs  session.rs  translate.rs
rio-gateway/tests/: ca_roundtrip.rs  golden_conformance.rs  integration_distributed.rs  metrics_registered.rs  ssh_hardening.rs  wire_opcodes.rs  with_jwt_audit.rs
rio-lease/: Cargo.toml
rio-lease/src/: election.rs  lib.rs
rio-nix/: Cargo.toml
rio-nix/fuzz/: Cargo.json  Cargo.toml  gen-nar-corpus.sh
rio-nix/src/: derivation.rs  hash.rs  lib.rs  nar.rs  narinfo.rs  refscan.rs  store_path.rs
rio-proto/: Cargo.toml  build.rs
rio-proto/proto/: admin.proto  admin_types.proto  admin_types.proto.fields  build_types.proto  builder.proto  dag.proto  scheduler.proto  store.proto  types.proto  worker.proto
rio-proto/src/: client.rs  interceptor.rs  lib.rs  status.rs  validated.rs
rio-proto/tests/: contract.rs  field_presence.rs  roundtrip.rs
rio-push/: Cargo.toml
rio-push/src/: lib.rs  main.rs  nix.rs  upload.rs
rio-push/tests/: e2e.rs
rio-scheduler/: Cargo.toml  build.rs
rio-scheduler/src/: actor.rs  admin.rs  assignment.rs  config.rs  critical_path.rs  dag.rs  db.rs  domain.rs  estimator.rs  event_log.rs  grpc.rs  lease.rs  lib.rs  logs.rs  main.rs  queue.rs  rebalancer.rs  state.rs  tests.rs
rio-scheduler/tests/: metrics_registered.rs  sla_fit_props.rs
rio-spike/: .gitignore  Cargo.toml
rio-spike/k8s/: eksctl-cluster.yaml  seccomp-spike.json  spike-pod.yaml
rio-spike/scripts/: bootstrap-backend.sh  run-spike.sh
rio-spike/src/: benchmark.rs  fuse_store.rs  main.rs  overlay.rs  synthetic_db.rs  validate.rs
rio-spike/terraform/: backend.tf  main.tf  outputs.tf  variables.tf
rio-store/: Cargo.toml  build.rs
rio-store/fuzz/: Cargo.json  Cargo.toml
rio-store/src/: admission.rs  backend.rs  cache_server.rs  cas.rs  chunker.rs  config.rs  content_index.rs  error.rs  grpc.rs  ingest.rs  lib.rs  main.rs  manifest.rs  metadata.rs  migrations.rs  realisations.rs  signing.rs  substitute.rs  test_helpers.rs  validate.rs
rio-store/tests/: admission.rs  grpc_integration.rs  metrics_registered.rs  migrations.rs  substitute_visibility.rs
rio-test-support/: Cargo.toml  build.rs
rio-test-support/golden/: derivation_statuses.json
rio-test-support/src/: config.rs  fixtures.rs  grpc.rs  kube_mock.rs  lib.rs  metrics.rs  metrics_grep.rs  pg.rs  wire.rs
rio-worker/: Cargo.toml  build.rs
rio-worker/src/: cgroup.rs  config.rs  executor.rs  health.rs  lib.rs  log_stream.rs  main.rs  overlay.rs  runtime.rs  synth_db.rs  upload.rs
rio-worker/tests/: metrics_registered.rs
xtask/: Cargo.toml
xtask/src/: aws.rs  config.rs  fuzz.rs  git.rs  helm.rs  kube.rs  main.rs  migration.rs  mutants.rs  sh.rs  ssh.rs  tofu.rs  ui.rs
(+2028 files in other folders)
