[workspace]
members = [
  "rio-common",
  "rio-gateway",
  "rio-nix",
  "rio-proto",
  "rio-scheduler",
  "rio-store",
  "rio-test-support",
  "rio-worker",
]
exclude = ["rio-nix/fuzz", "rio-store/fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Rio Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lovesegfault/rio-build"

[workspace.dependencies]
# Internal crates
rio-common = { path = "rio-common" }
rio-nix = { path = "rio-nix" }
rio-proto = { path = "rio-proto" }
rio-store = { path = "rio-store" }
rio-test-support = { path = "rio-test-support" }

# Byte buffers
bytes = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SSH server
russh = "0.57"
ssh-key = { version = "0.6", features = ["ed25519", "std"] }
async-trait = "0.1"

# gRPC
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# Database
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "sqlite",
  "macros",
  "migrate",
  "uuid",
] }
uuid = { version = "1", features = ["v4", "v7"] }

# S3
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# FUSE
fuser = "0.17"

# Linux syscalls
nix = { version = "0.31", features = [
  "mount",
  "sched",
  "fs",
  "user",
  "hostname",
  "process",
  "signal",
] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# OpenTelemetry (phase2b: full OTLP, not just stdout — milestone requires
# "traces visible in Jaeger")
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }

# Configuration (phase2b: TOML + RIO_ env overlay)
figment = { version = "0.10", features = ["toml", "env"] }

# Compression (phase2b: build-log gzip before S3 flush)
flate2 = "1"

# Concurrent map (phase2b: scheduler log ring buffers, written from
# BuildExecution recv tasks outside the actor loop)
dashmap = "6"

# --- phase2c: chunked CAS ---
# Content-defined chunking. v2020 algorithm — Chunker::new(data, min, avg, max)
# slices at statistically-stable boundaries so small edits only perturb the
# chunk they touch (dedup-friendly).
fastcdc = "3"
# Chunk addressing (internal only — never exposed to Nix). Also reused for
# bloom-filter hashing (split 256-bit output into k double-hash indices;
# portable across architectures, unlike AES-NI-based non-crypto hashes).
blake3 = "1"
# In-process chunk cache. Lock-free, weight-based eviction — moka tracks
# byte-size per entry so the 2GB cap is a real memory bound, not just an
# entry count. Singleflight wraps the miss path.
moka = { version = "0.12", features = ["future"] }
# On-the-fly NAR compression for the binary-cache HTTP endpoint. NARs are
# stored uncompressed (chunked) for dedup; zstd only at serve time.
zstd = "0.13"

# --- phase2c: binary cache HTTP server ---
axum = "0.8"
tower = "0.5"
# narinfo signing. pkcs8 for key encode/decode; rand_core for keygen in tests.
# Nix binary caches sign the fingerprint `1;path;narHash;narSize;refs` —
# sigs are stored at PutPath time so the HTTP server never touches the privkey.
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }

# --- phase2c: priority scheduling ---
# BinaryHeap over f64 critical-path priority. f64 doesn't impl Ord (NaN);
# OrderedFloat<f64> is the standard workaround.
ordered-float = "5"

# Crypto
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"

# Encoding
hex = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Randomness (retry jitter)
rand = "0.9"

# Stream utilities (tonic re-exports, but we need it directly for ReceiverStream etc.)
tokio-stream = "0.1"
futures-util = "0.3"

# Testing
proptest = "1"
tempfile = "3"

[profile.release]
lto = "thin"
