[workspace]
members = [
  "rio-common",
  "rio-gateway",
  "rio-nix",
  "rio-proto",
  "rio-scheduler",
  "rio-store",
  "rio-test-support",
  "rio-worker",
]
exclude = ["rio-nix/fuzz", "rio-store/fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Rio Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lovesegfault/rio-build"

[workspace.dependencies]
# Internal crates
rio-common = { path = "rio-common" }
rio-nix = { path = "rio-nix" }
rio-proto = { path = "rio-proto" }
rio-store = { path = "rio-store" }
rio-test-support = { path = "rio-test-support" }

# Byte buffers
bytes = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SSH server
russh = "0.57"
ssh-key = { version = "0.6", features = ["ed25519", "std"] }
async-trait = "0.1"

# gRPC
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# Database
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "sqlite",
  "macros",
  "migrate",
  "uuid",
] }
uuid = { version = "1", features = ["v4", "v7"] }

# S3
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# FUSE
fuser = "0.17"

# Linux syscalls
nix = { version = "0.31", features = [
  "mount",
  "sched",
  "fs",
  "user",
  "hostname",
  "process",
  "signal",
] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# OpenTelemetry (phase2b: full OTLP, not just stdout — milestone requires
# "traces visible in Jaeger")
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }

# Configuration (phase2b: TOML + RIO_ env overlay)
figment = { version = "0.10", features = ["toml", "env"] }

# Compression (phase2b: build-log gzip before S3 flush)
flate2 = "1"

# Concurrent map (phase2b: scheduler log ring buffers, written from
# BuildExecution recv tasks outside the actor loop)
dashmap = "6"

# --- phase2c: chunked CAS ---
# Content-defined chunking. v2020 algorithm — Chunker::new(data, min, avg, max)
# slices at statistically-stable boundaries so small edits only perturb the
# chunk they touch (dedup-friendly).
fastcdc = "3"
# Chunk addressing (internal only — never exposed to Nix). Also reused for
# bloom-filter hashing (split 256-bit output into k double-hash indices;
# portable across architectures, unlike AES-NI-based non-crypto hashes).
blake3 = "1"
# In-process chunk cache. Lock-free, weight-based eviction — moka tracks
# byte-size per entry so the 2GB cap is a real memory bound, not just an
# entry count. Singleflight wraps the miss path.
moka = { version = "0.12", features = ["future"] }
# On-the-fly NAR compression for the binary-cache HTTP endpoint. NARs are
# stored uncompressed (chunked) for dedup; zstd only at serve time.
zstd = "0.13"

# --- phase2c: binary cache HTTP server ---
axum = "0.8"
tower = "0.5"
# narinfo signing. pkcs8 for key encode/decode; rand_core for keygen in tests.
# Nix binary caches sign the fingerprint `1;path;narHash;narSize;refs` —
# sigs are stored at PutPath time so the HTTP server never touches the privkey.
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }

# --- phase2c: priority scheduling ---
# BinaryHeap over f64 critical-path priority. f64 doesn't impl Ord (NaN);
# OrderedFloat<f64> is the standard workaround.
ordered-float = "5"

# --- phase3a: Kubernetes operator ---
# kube 3.0 breaking from 2.x: chrono→jiff timestamps, ErrorResponse folded
# into Status. runtime = Controller abstraction + watcher. derive =
# #[derive(CustomResource)] + #[kube(...)]. client = kube::Client::try_default
# reads in-cluster service-account token.
kube = { version = "3.0", features = ["runtime", "derive", "client"] }
# k8s-openapi types are feature-gated by K8s API version. v1_35 is the
# highest this release supports. The feature pins which struct fields
# exist (e.g., ephemeralContainers moved GA in different versions).
k8s-openapi = { version = "0.27", features = ["v1_35"] }
# schemars 1.x NOT 0.8 — kube 3.0 requires the major break. CRD JSON
# schema generation for #[derive(JsonSchema)].
schemars = "1"
# Lease-based leader election. Thin wrapper over coordination.k8s.io/v1
# Lease. No fencing — if two replicas briefly believe they're leader,
# both dispatch. Acceptable: dispatch is idempotent (drv_hash dedup in
# DAG merge, workers ignore stale-generation assignments).
kube-leader-election = "0.43"
# Deprecated (2024-03) but write-only usage = no attack surface (the
# advisory is about parsing untrusted YAML). crdgen binary only SERIALIZES
# our own CRD structs. serde_norway is the maintained fork if we ever
# need deserialization.
serde_yaml = "0.9"

# --- phase3a: health + streaming ---
# grpc.health.v1.Health service. K8s readiness probes hit this.
tonic-health = "0.14"
# Streaming zstd for the binary-cache /nar/ endpoint. Replaces the
# buffered encode_all (4GB peak for 4GB NAR) with O(chunk) pipeline.
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
# StreamReader: turn a Stream<Item=Bytes> into an AsyncRead. Feeds
# async-compression's ZstdEncoder which needs AsyncBufRead.
tokio-util = { version = "0.7", features = ["io"] }

# --- phase3a: controller testing (dev) ---
# mock::pair() gives a tower Service + Handle. Wrap the Service in
# kube::Client::new() and the reconciler talks to a fake API server.
tower-test = "0.4"
# .collect().await on kube::client::Body for mock response assembly.
http-body-util = "0.1"
http = "1"

# Crypto
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"

# Encoding
hex = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Randomness (retry jitter)
rand = "0.9"

# Stream utilities (tonic re-exports, but we need it directly for ReceiverStream etc.)
tokio-stream = "0.1"
futures-util = "0.3"

# Testing
proptest = "1"
tempfile = "3"

[profile.release]
lto = "thin"

# Compile dependencies with optimization even in dev/test profile.
# Speeds up crypto-heavy tests (zstd/blake3/sha2/ed25519/fastcdc) — those
# are inner-loop bytes-per-cycle code that's 10-50× slower unoptimized.
# Deps rebuild rarely (cached by Crane's buildDepsOnly), so the one-time
# compile cost is amortized. Workspace crates stay at opt-level=0 for
# fast incremental rebuilds + usable debuginfo.
[profile.dev.package."*"]
opt-level = 2
