[workspace]
members = [
  "rio-cli",
  "rio-common",
  "rio-controller",
  "rio-gateway",
  "rio-nix",
  "rio-proto",
  "rio-scheduler",
  "rio-store",
  "rio-test-support",
  "rio-worker",
  "rio-crds",
  "rio-bench",
  "workspace-hack",
  "xtask",
]
exclude = ["rio-nix/fuzz", "rio-store/fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Rio Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/lovesegfault/rio-build"

[workspace.dependencies]
# Internal crates
rio-common = { path = "rio-common" }
rio-nix = { path = "rio-nix" }
rio-proto = { path = "rio-proto" }
rio-scheduler = { path = "rio-scheduler" }
rio-store = { path = "rio-store" }
rio-test-support = { path = "rio-test-support" }
rio-crds = { path = "rio-crds" }

# Byte buffers
bytes = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SSH server
russh = "0.58"
ssh-key = { version = "0.6", features = ["ed25519", "std"] }
async-trait = "0.1"

# gRPC
# tls-aws-lc: matches the rustls CryptoProvider choice (aws-lc-rs, not
# ring). tonic's tls feature family wraps rustls; without tls-*, there's
# no ClientTlsConfig/ServerTlsConfig at all. Phase 3b mTLS needs both.
tonic = { version = "0.14", features = ["transport", "tls-aws-lc"] }
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# Database
# tls-rustls-aws-lc-rs: Aurora PG 15+ has rds.force_ssl=1 by default —
# connections without TLS are rejected. aws-lc-rs matches the workspace
# rustls CryptoProvider (see `rustls` dep below and tonic's tls-aws-lc).
# Connection strings use `?sslmode=require` (encrypt, don't verify cert).
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "sqlite",
  "macros",
  "migrate",
  "uuid",
  "tls-rustls-aws-lc-rs",
] }
uuid = { version = "1", features = ["v4", "v7"] }

# S3
aws-sdk-s3 = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# FUSE
fuser = "0.17"

# Linux syscalls
nix = { version = "0.31", features = [
  "mount",
  "sched",
  "fs",
  "user",
  "hostname",
  "process",
  "signal",
] }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# OpenTelemetry (phase2b: full OTLP, not just stdout — milestone requires
# "traces visible in Jaeger")
tracing-opentelemetry = "0.32"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }

# Configuration (phase2b: TOML + RIO_ env overlay)
figment = { version = "0.10", features = ["toml", "env"] }

# Compression (phase2b: build-log gzip before S3 flush)
flate2 = "1"

# Concurrent map (phase2b: scheduler log ring buffers, written from
# BuildExecution recv tasks outside the actor loop)
dashmap = "6"

# Per-tenant rate limiting (phase4b gateway). DefaultKeyedRateLimiter
# keyed on tenant_name (bounded keyspace — authorized_keys comment is
# operator-controlled, not client-forgeable). No eviction needed.
governor = "0.10"

# --- phase2c: chunked CAS ---
# Content-defined chunking. v2020 algorithm — Chunker::new(data, min, avg, max)
# slices at statistically-stable boundaries so small edits only perturb the
# chunk they touch (dedup-friendly).
fastcdc = "3"
# Chunk addressing (internal only — never exposed to Nix). Also reused for
# bloom-filter hashing (split 256-bit output into k double-hash indices;
# portable across architectures, unlike AES-NI-based non-crypto hashes).
blake3 = "1"
# In-process chunk cache. Lock-free, weight-based eviction — moka tracks
# byte-size per entry so the 2GB cap is a real memory bound, not just an
# entry count. Singleflight wraps the miss path.
moka = { version = "0.12", features = ["future"] }
# On-the-fly NAR compression for the binary-cache HTTP endpoint. NARs are
# stored uncompressed (chunked) for dedup; zstd only at serve time.
zstd = "0.13"

# --- phase2c: binary cache HTTP server ---
axum = "0.8"
tower = "0.5"
# narinfo signing. pkcs8 for key encode/decode; rand_core for keygen in tests.
# Nix binary caches sign the fingerprint `1;path;narHash;narSize;refs` —
# sigs are stored at PutPath time so the HTTP server never touches the privkey.
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }

# --- phase5: JWT tenant tokens (rio-common::jwt) ---
# EdDSA (ed25519) signing — scheduler/store/controller verify the gateway's
# signature + expiry on every gRPC call. The signing key lives in a K8s
# Secret; the public key is distributed via ConfigMap.
# v10: crypto is trait-based; must pick a backend. rust_crypto (pure-Rust,
# includes ed25519-dalek which we already depend on) over aws_lc_rs (adds
# a C dep + build-time bindgen). use_pem is default but we only use DER.
jsonwebtoken = { version = "10", default-features = false, features = [
  "rust_crypto",
] }

# --- phase2c: priority scheduling ---
# BinaryHeap over f64 critical-path priority. f64 doesn't impl Ord (NaN);
# OrderedFloat<f64> is the standard workaround.
ordered-float = "5"

# --- phase3a: Kubernetes operator ---
# kube 3.0 breaking from 2.x: chrono→jiff timestamps, ErrorResponse folded
# into Status. runtime = Controller abstraction + watcher. derive =
# #[derive(CustomResource)] + #[kube(...)]. client = kube::Client::try_default
# reads in-cluster service-account token.
kube = { version = "3.0", features = ["runtime", "derive", "client"] }
# rustls direct: kube pulls it via hyper-rustls (ring feature), aws-sdk
# pulls it via aws-lc-rs feature. With BOTH features active, rustls 0.23
# can't auto-select a CryptoProvider → panic at first TLS use. Binaries
# that use both (rio-controller: kube + rio-proto which has aws-sdk
# transitively) must call install_default() early. Direct dep lets us
# access rustls::crypto without relying on transitive re-exports.
rustls = { version = "0.23", default-features = false, features = [
  "aws-lc-rs",
] }
# k8s-openapi types are feature-gated by K8s API version. v1_35 is the
# highest this release supports. The feature pins which struct fields
# exist (e.g., ephemeralContainers moved GA in different versions).
k8s-openapi = { version = "0.27", features = ["v1_35"] }
# schemars 1.x NOT 0.8 — kube 3.0 requires the major break. CRD JSON
# schema generation for #[derive(JsonSchema)].
schemars = "1"
# crdgen-only: serialize CustomResourceExt::crd() to YAML for kustomize.
# serde_yml is the maintained fork of serde_yaml (which is RUSTSEC-
# 2024-0320 unmaintained). Drop-in API. kube-client still transitively
# pulls serde_yaml for kubeconfig parsing — see deny.toml.
serde_yml = "0.0.12"

# --- phase3a: health + streaming ---
# grpc.health.v1.Health service. K8s readiness probes hit this.
tonic-health = "0.14"
# Streaming zstd for the binary-cache /nar/ endpoint. Replaces the
# buffered encode_all (4GB peak for 4GB NAR) with O(chunk) pipeline.
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
# StreamReader: turn a Stream<Item=Bytes> into an AsyncRead. Feeds
# async-compression's ZstdEncoder which needs AsyncBufRead.
tokio-util = { version = "0.7", features = ["io"] }

# --- phase3a: controller testing (dev) ---
# mock::pair() gives a tower Service + Handle. Wrap the Service in
# kube::Client::new() and the reconciler talks to a fake API server.
tower-test = "0.4"
# .collect().await on kube::client::Body for mock response assembly.
http-body-util = "0.1"
# In-process tonic transport: wrap tokio::io::duplex halves so
# start_paused tests don't see spurious auto-advance on real TCP.
hyper-util = "0.1"
http = "1"

# Crypto
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
# HMAC-SHA256 for assignment tokens (Phase 3b). Constant-time verify
# via Mac::verify_slice — never compare raw tag bytes with ==.
hmac = "0.12"

# Test-only cert generation for mTLS integration tests. Not a prod dep
# — real deployments use cert-manager. rcgen's in-memory API lets
# tests build a CA + client/server certs without touching disk.
rcgen = "0.14"
# Parse TLS client certs for CN-based HMAC bypass (rio-store PutPath).
# Already a transitive dep (via rustls pki chain); direct for API.
x509-parser = "0.18"

# Encoding
hex = "0.4"

# Error handling
thiserror = "2"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Randomness (retry jitter)
rand = "0.9"

# Stream utilities (tonic re-exports, but we need it directly for ReceiverStream etc.)
tokio-stream = "0.1"
futures-util = "0.3"

# Sync primitives. parking_lot::RwLock for shared hot-path state where
# writes are rare (rebalancer → size_classes at 1/hour, reads per-dispatch).
# Sync (no .await across guard) keeps classify() sync.
parking_lot = "0.12"

# Testing
proptest = "1"
tempfile = "3"
tracing-test = "0.2"
aws-smithy-mocks = "0.2"

# Utility
regex = "1"
scopeguard = "1"

# --- xtask (dev tooling) ---
xshell = "0.2"
# Pure-Rust git (no libgit2 C dep). xtask needs rev-parse + dirty-tree
# detection for the ECR image tag. status/dirwalk covers both tracked
# changes and untracked files (the push script hashes `git diff HEAD` +
# `git status --porcelain`).
gix = { version = "0.81", default-features = false, features = [
  "basic",
  "dirwalk",
  "revision",
  "status",
  "blob-diff",
  "sha1",
  "parallel",
] }
aws-sdk-ecr = "1"
aws-sdk-elasticloadbalancingv2 = "1"
aws-sdk-sts = "1"
reqwest = { version = "0.13", default-features = false, features = [
  "rustls",
  "rustls-native-certs",
  "json",
] }
dotenvy = "0.15"
indicatif = "0.18"
tracing-indicatif = "0.3"
human-panic = "2"
clap-verbosity-flag = { version = "3", default-features = false, features = [
  "tracing",
] }
console = "0.16"
filetime = "0.2"

[profile.release]
lto = "thin"

# Compile dependencies with optimization even in dev/test profile.
# Speeds up crypto-heavy tests (zstd/blake3/sha2/ed25519/fastcdc) — those
# are inner-loop bytes-per-cycle code that's 10-50× slower unoptimized.
# Deps rebuild rarely (cached by Crane's buildDepsOnly), so the one-time
# compile cost is amortized. Workspace crates stay at opt-level=0 for
# fast incremental rebuilds + usable debuginfo.
[profile.dev.package."*"]
opt-level = 2
