# SPDX-FileCopyrightText: 2023 embr <git@liclac.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "nix-supervisor"
version = "0.1.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "macros", "parking_lot", "time", "io-util", "net", "signal", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
clap = { version = "4", features = ["derive", "env", "string"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tap = "1.0"
num_enum = "0.6"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio" ] }
sea-orm-migration = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-chrono", "with-json"] }
axum = "0.6"
tower-http = { version = "0.4", features = ["trace"] }
listenfd = "1.0"
xdg = "2.5"
async-tempfile = "0.4.0"
nix-daemon = { path = "../nix-daemon" }
