# SPDX-FileCopyrightText: 2023 embr <git@liclac.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "nix-web"
version = "0.4.2"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "macros", "parking_lot", "process"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hyper = { version = "0.14", features = ["http1", "server", "runtime"] }
axum = "0.6"
tower-http = { version = "0.4", features = ["trace", "catch-panic"] }
askama = { version = "0.12", features = ["with-axum", "serde", "serde-json"] }
askama_axum = "0.3"
askama_escape = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
lazy_static = "1.4"
regex = "1.8"
listenfd = "1.0"
tap = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
nix-daemon = { path = "../nix-daemon" }
yap = "0.12.0"
