[package]
name = "rio-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Benchmark harness: SubmitBuild latency, dispatch throughput, DAG generators"

[dependencies]
rio-proto = { workspace = true }
rio-scheduler = { path = "../rio-scheduler" }
rio-test-support = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
# Random 32-char nixbase32 hash generation for synthetic drv paths.
# Workspace rand is 0.9 (plan doc says 0.8 — superseded by workspace pin).
rand = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
# dispatch bench: Uuid::now_v7() for build_id when driving the
# actor directly (bypassing gRPC).
uuid = { workspace = true }

[dev-dependencies]
# html_reports: writes target/criterion/<bench>/report/index.html for
# local inspection. async_tokio: enables b.to_async(&rt).iter(||...)
# so bench closures can await gRPC calls.
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio-stream = { workspace = true }
# synth_paths_pass_store_path_parse test: verify generated paths pass
# the same StorePath::parse gate SubmitBuild uses.
rio-nix = { workspace = true }

[[bench]]
name = "submit_build"
# criterion provides its own main() — without harness=false cargo
# links both and rustc fails with "duplicate lang item `panic_impl`".
harness = false

[[bench]]
name = "dispatch"
harness = false
