[package]
name = "rio-build"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rio-nix = { workspace = true }
rio-proto = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# SSH server
russh = { workspace = true }
ssh-key = { workspace = true }

# Logging & metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Serialization (used by store pre-population from local nix)
serde_json = { workspace = true }

# Byte handling
bytes = { workspace = true }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
