[package]
name = "rio-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Admin CLI for rio-build — talks to the scheduler's AdminService"

[[bin]]
name = "rio-cli"
path = "src/main.rs"

[dependencies]
rio-common = { workspace = true }
rio-proto = { workspace = true }
# CRD types only (WorkerPool, WorkerPoolSet) — NOT rio-controller.
# rio-crds was extracted specifically so rio-cli can import CRD
# structs without pulling the reconciler stack.
rio-crds = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }
# Direct rustls for CryptoProvider::install_default(). Without it,
# dual ring+aws-lc-rs feature activation → rustls panic on first TLS
# use. Same rationale as every other rio binary.
rustls = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# kube::Client + Api<T> for `wps` subcommand (talks to K8s apiserver,
# not gRPC). Workspace dep already has `client` feature enabled.
kube = { workspace = true }
# Version-feature activation. Moved from dev-deps: now that kube is
# a regular dep (via the wps subcommand), k8s-openapi's build.rs
# feature check fires on `cargo build -p rio-cli` too, not just
# `cargo test`. See the original dev-deps comment below for detail.
k8s-openapi = { workspace = true }

[dev-dependencies]
rio-test-support = { workspace = true }
# wps::tests builds Scenario literals with http::Method::GET for the
# kube_mock ApiServerVerifier. rio-test-support has http as a dep but
# doesn't re-export it; add directly so the Method constants resolve.
http = { workspace = true }
