[package]
name = "rio-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Shared configuration, observability, and error types for rio-build"

[dependencies]
# Logging & metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# OpenTelemetry (optional OTLP export, RIO_OTEL_ENDPOINT-gated)
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Configuration (figment: TOML + env + CLI layered)
figment = { workspace = true }
serde = { workspace = true }

# Async runtime (for spawn_monitored)
tokio = { workspace = true }
futures-util = "0.3"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }

# Bloom filter hash (phase2c D1). blake3: portable (deterministic across
# architectures — matters for a WIRE PROTOCOL where worker builds and
# scheduler queries must agree on bit indices). Single 256-bit output
# split into double-hash values; no seeded re-hash.
blake3 = { workspace = true }

[dev-dependencies.proptest]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
# figment::Jail (test-only env/cwd manipulation under a global mutex)
figment = { workspace = true, features = ["test"] }
