[package]
name = "rio-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false
description = "Shared configuration, observability, and error types for rio-build"

[dependencies]
# Logging & metrics
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# OpenTelemetry (optional OTLP export, RIO_OTEL_ENDPOINT-gated)
tracing-opentelemetry = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }

# Configuration (figment: TOML + env + CLI layered)
figment = { workspace = true }
serde = { workspace = true }

# Async runtime (for spawn_monitored)
tokio = { workspace = true }
futures-util = { workspace = true }
# CancellationToken (graceful shutdown, signal.rs).
tokio-util = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
# Health service types for the shared spawn_health_plaintext helper.
tonic-health = { workspace = true }

# Bloom filter hash (phase2c D1). blake3: portable (deterministic across
# architectures — matters for a WIRE PROTOCOL where worker builds and
# scheduler queries must agree on bit indices). Single 256-bit output
# split into double-hash values; no seeded re-hash.
blake3 = { workspace = true }

# HMAC-SHA256 assignment tokens (phase3b B track). Constant-time
# verify via Mac::verify_slice.
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
# Claims serialize to JSON (self-delimiting, human-debuggable).
serde_json = { workspace = true }

# JWT tenant tokens (phase5 JWT spine). ed25519 sign/verify via
# jsonwebtoken's EdDSA; pkcs8 feature on ed25519-dalek gives us
# to_pkcs8_der()/to_public_key_der() → the DER encoding from_ed_der
# expects. uuid serde feature for `sub: Uuid` in Claims.
jsonwebtoken = { workspace = true }
ed25519-dalek = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies.proptest]
workspace = true

[dev-dependencies]
tempfile = { workspace = true }
# libc::raise for signal self-delivery test.
libc = "0.2"
# figment::Jail (test-only env/cwd manipulation under a global mutex)
figment = { workspace = true, features = ["test"] }
# In-memory cert generation for mTLS integration test. Generates
# a CA + client/server leaf certs without touching disk — proves
# the load_server_tls/load_client_tls output actually works in a
# real tonic handshake.
rcgen = { workspace = true }
# TcpListenerStream for test server.
tokio-stream = { workspace = true, features = ["net"] }
# Health service used as a trivial gRPC service to hit in the
# integration test. Already in workspace deps.
tonic-health = { workspace = true }
# Direct rustls access for CryptoProvider install in tests.
rustls = { workspace = true }
